# fluister

./: .gitignore  FLUISTER_DESIGN_BRIEF.md  LICENSE  README.md  RELEASING.md  history.html  index.html  onboarding.html  package.json  pnpm-lock.yaml  popover.html  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: clippy.sh
.claude/skills/publishing/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.github/workflows/: release.yml
design/: App Redesign.html  Fluister Marketing Site.html  app.jsx  hero-character.jsx  hero-livedemo.jsx  hero-quiet.jsx  hero-shared.jsx  hero-typographic.jsx  index.html  site.css  site.js  wordmarks.jsx
design/app/: canvas.jsx  history.jsx  icons.jsx  profiles.jsx  recording.jsx  settings.jsx  tokens.jsx  vocab.jsx
design_handoff_fluister/: BRIEF.md  Fluister Wireframes.html  README.md  wireframes-app.jsx  wireframes-history.jsx  wireframes-onboarding.jsx  wireframes-overlay.jsx  wireframes-popover.jsx  wireframes-tray.jsx
docs/: mcp.md
scripts/: bump.mjs  install.sh
src/: history.css  history.ts  languages.ts  main.ts  onboarding.css  onboarding.ts  popover.css  popover.ts  styles.css  theme.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: fetch-llama-server.sh
src-tauri/src/: apps.rs  audio.rs  db.rs  frontmost.rs  hotkey.rs  lib.rs  llama_server.rs  llm.rs  llm_download.rs  llm_prompt.rs  main.rs  mcp.rs  model_download.rs  ollama.rs  paste.rs  permissions.rs  transcribe.rs  vault.rs  vault_watcher.rs  vocabulary.rs
src/components/atoms/: Btn.tsx  Divider.tsx  Field.tsx  GroupLabel.tsx  Kbd.tsx  SearchBox.tsx  Segmented.tsx  Tag.tsx  Toolbar.tsx  Wordmark.tsx  index.ts
src/components/icons/: AppGlyph.tsx  Icon.tsx  IconAbout.tsx  IconChevDown.tsx  IconChevRight.tsx  IconCopy.tsx  IconGrip.tsx  IconHistory.tsx  IconHotkey.tsx  IconMic.tsx  IconModels.tsx  IconPause.tsx  IconPencil.tsx  IconPlay.tsx  IconPlug.tsx  IconPlus.tsx  IconProfile.tsx  IconSearch.tsx  IconSettings.tsx  IconSparkle.tsx  IconStar.tsx  IconStorage.tsx  IconTrash.tsx  IconVocab.tsx  IconX.tsx  index.ts
src/components/ui/: card.tsx  dialog.tsx  dropdown-menu.tsx
src/history/: App.tsx  AppPickerDialog.tsx  ConfirmDeleteDialog.tsx  EditorHeader.tsx  EmptyDetail.tsx  HistoryDetailPane.tsx  HistoryList.tsx  HistoryListPane.tsx  HistorySidebar.tsx  IconRail.tsx  NewItemToolbar.tsx  Row.tsx  Sidebar.tsx  UpdateBanner.tsx  main.tsx
src/history/pages/: HistoryPage.tsx  ProfilesPage.tsx  SettingsPage.tsx  VocabularyPage.tsx
src/history/panes/: AboutPane.tsx  CleanupPane.tsx  GeneralPane.tsx  HotkeysPane.tsx  IntegrationsPane.tsx  ModelsPane.tsx  Pref.tsx  RecordingPane.tsx  StoragePane.tsx
src/lib/: format.ts  hooks.ts  profiles.ts  tauri.ts  useUpdater.ts
src/onboarding/: App.tsx  main.tsx
src/overlay/: App.tsx  Pill.tsx  Waveform.tsx
src/popover/: App.tsx  main.tsx
