[package]
name = "fluister"
version = "0.1.0"
description = "Voice-to-text overlay with local Whisper transcription + bundled llama-server cleanup"
authors = ["Andre de Vries"]
edition = "2021"

[lib]
name = "fluister_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
# Sidecar spawn + child-process management for the bundled llama-server.
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
enigo = "0.3"
log = "0.4"
env_logger = "0.11"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"

# Vault file format — markdown profiles/vocab live on disk in the user's
# Fluister vault. serde_yaml parses the YAML frontmatter; ulid produces
# stable identifiers that survive cache rebuilds and multi-machine sync.
serde_yaml = "0.9"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# File watcher for the vault — picks up edits made externally (Obsidian, BBEdit,
# `git pull` on a synced vault). FSEvents on macOS via the recommended backend.
notify = "6"

# whisper-rs builds whisper.cpp through cmake + clang.
# Metal is enabled on macOS for Apple Silicon GPU acceleration.
# core-graphics + core-foundation power the Right-Option global hotkey via CGEventTap.
# objc2 drives frontmost-app tracking + activation for re-paste from history,
# and the /Applications enumeration in apps.rs.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", features = ["metal"] }
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
# SIGTERM to the llama-server sidecar during graceful shutdown — CommandChild
# only exposes SIGKILL, so we send the polite signal ourselves.
libc = "0.2"

[lints.clippy]
# Tauri command handlers naturally collect many parameters (AppHandle, State,
# every form field). Splitting them into a struct adds plumbing without
# improving readability for one-shot RPC handlers.
too_many_arguments = "allow"

[profile.release]
opt-level = 3
# Historically disabled because window-vibrancy's NSVisualEffectViewTagged
# subclass collided with fat-LTO. The dep is gone now (the popover was
# replaced by a native NSMenu) so this could be re-enabled — leaving as
# `false` for now to keep the deploy profile change to its own PR.
lto = false
codegen-units = 1
strip = true
